Inserito nuovo plug-in per select multipla (select2)

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -68,6 +68,10 @@
 			src="../static/bootstrapSelect/js/bootstrapSelect.js"
 			th:src="@{/bootstrapSelect/js/bootstrapSelect.js}"></script>
 
+		<!-- select2 -->
+		<script src="../static/gentella/js/select/select2.full.js"
+				th:src="@{/gentella/js/select/select2.full.js}"></script>
+
 		<!-- back to top -->
 		<script
 			src="../static/backToTop/js/main.js"
