--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -85,6 +85,11 @@
 				href="..static/bootstrapSelect/css/bootstrapSelect.min.css"
 				th:href="@{/bootstrapSelect/css/bootstrapSelect.min.css}" />
 
+			<!-- select2 -->
+			<link rel="stylesheet"
+				href="..static/gentella/css/select/select2.min.css"
+				th:href="@{/gentella/css/select/select2.min.css}" />
+
 			<!-- animate -->
 			<link rel="stylesheet"
 				href="../static/gentella/css/animate.min.css"
