--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1003,3 +1003,25 @@ h2 {
 .comunicazione-show-container {
 	padding: 10px;
 }
+
+/* patch css richiesta al side menu dalla regione veneto */
+.nav.child_menu > li > a {
+	font-weight: bold;
+}
+
+.nav.side-menu > li > a {
+	font-size: 15px;
+	font-weight: bold;
+}
+
+.tile-stats.clickable:hover {
+	border-color: #337ab7;
+}
+
+.yellowBGround {
+	background-color: rgba(254,239,0,0.4) !important;
+}
+
+.whiteBGround {
+	background-color: rgba(255,255,255,0.4) !important;
+}
