--- a/src/main/resources/templates/evento/eventoFragment.html
+++ b/src/main/resources/templates/evento/eventoFragment.html
@@ -76,7 +76,7 @@
 									<div class="value" th:text="${eventoWrapper.evento.proceduraFormativa.nome}"></div>
 								</div>
 								<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
-		                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('evento.proceduraFormativa')}" /> 
+		                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('evento.proceduraFormativa')}" />
 		                    	</div>
 							</th:block>
 							<th:block th:if="${valutabile}">
@@ -129,7 +129,7 @@
 									<div class="value" th:text="${eventoWrapper.evento.titolo}"></div>
 								</div>
 								<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
-		                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('evento.titolo')}" /> 
+		                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('evento.titolo')}" />
 		                    	</div>
 							</th:block>
 							<th:block th:if="${valutabile}">
@@ -199,7 +199,7 @@
 									<div class="value" th:text="${eventoWrapper.evento.obiettivoNazionale.nome}"></div>
 								</div>
 								<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
-		                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('evento.obiettivoNazionale')}" /> 
+		                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('evento.obiettivoNazionale')}" />
 		                    	</div>
 							</th:block>
 							<th:block th:if="${valutabile}">
@@ -263,7 +263,7 @@
 									<div class="value" th:text="${eventoWrapper.evento.obiettivoRegionale.nome}"></div>
 								</div>
 								<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
-		                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('evento.obiettivoRegionale')}" /> 
+		                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('evento.obiettivoRegionale')}" />
 		                    	</div>
 							</th:block>
 							<th:block th:if="${valutabile}">
@@ -331,7 +331,7 @@
 									<div class="value" th:text="${eventoWrapper.evento.professioniEvento}"></div>
 								</div>
 								<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
-		                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('evento.professioniEvento')}" /> 
+		                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('evento.professioniEvento')}" />
 		                    	</div>
 							</th:block>
 							<th:block th:if="${valutabile}">
@@ -406,35 +406,52 @@
 								</div>
 							</th:block>
 							<th:block th:if="${showOnly or enableField}">
-								<div class="row" style="clear: both; padding: 2px;"></div>
-								<div class="row" style="clear: both">
-									<div class="col-md-3 col-sm-3 col-xs-11"></div>
-									<div class="col-md-6 col-sm-6 col-xs-11">
-										<table class="professioni-discipline table table-striped table-bordered dt-responsive nowrap datatable-responsive-discipline" cellspacing="0" width="100%">
-											<thead>
-												<tr>
-													<th th:text="#{label.professione}">Professione</th>
-													<th th:text="#{label.disciplina}">Disciplina</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr th:each="disciplina, row: ${eventoWrapper.evento.discipline}">
-													<td th:text="${disciplina.professione.nome}"></td>
-													<td th:text="${disciplina.nome}"></td>
-												</tr>
-											</tbody>
-										</table>
+								<th:block th:if="${eventoWrapper.evento.professioniEvento == 'Generale'}">
+									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
+										<div class="value" th:text="#{label.tutte_le_professioni}"></div>
 									</div>
 									<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
-			                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('evento.discipline')}" /> 
+			                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('evento.discipline')}" />
 			                    	</div>
-								</div>
+								</th:block>
+								<th:block th:unless="${eventoWrapper.evento.professioniEvento == 'Generale'}">
+									<div class="row" style="clear: both; padding: 2px;"></div>
+									<div class="row" style="clear: both">
+										<div class="col-md-3 col-sm-3 col-xs-11"></div>
+										<div class="col-md-6 col-sm-6 col-xs-11">
+											<table class="professioni-discipline table table-striped table-bordered dt-responsive nowrap datatable-responsive-discipline" cellspacing="0" width="100%">
+												<thead>
+													<tr>
+														<th th:text="#{label.professione}">Professione</th>
+														<th th:text="#{label.disciplina}">Disciplina</th>
+													</tr>
+												</thead>
+												<tbody>
+													<tr th:each="disciplina, row: ${eventoWrapper.evento.discipline}">
+														<td th:text="${disciplina.professione.nome}"></td>
+														<td th:text="${disciplina.nome}"></td>
+													</tr>
+												</tbody>
+											</table>
+										</div>
+										<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+				                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('evento.discipline')}" />
+				                    	</div>
+									</div>
+								</th:block>
 							</th:block>
 							<th:block th:if="${valutabile}">
-		                    	<div class="margin-valutabile text-center col-lg-4 col-md-3 col-sm-7 col-xs-7">
-			              			<button type="button" class="btn btn-default toggleButtons" th:text="#{label.mostra}" onclick="showTable()"></button>
-			              			<button type="button" class="btn btn-default toggleButtons" style="display: none;" th:text="#{label.nascondi}" onclick="showTable()"></button>
-		                    	</div>
+								<th:block th:if="${eventoWrapper.evento.professioniEvento == 'Generale'}">
+										<div class="margin-valutabile text-center col-lg-4 col-md-3 col-sm-7 col-xs-7">
+											<div th:text="#{label.tutte_le_professioni}"></div>
+										</div>
+									</th:block>
+									<th:block th:unless="${eventoWrapper.evento.professioniEvento == 'Generale'}">
+			                    	<div class="margin-valutabile text-center col-lg-4 col-md-3 col-sm-7 col-xs-7">
+				              			<button type="button" class="btn btn-default toggleButtons" th:text="#{label.mostra}" onclick="showTable()"></button>
+				              			<button type="button" class="btn btn-default toggleButtons" style="display: none;" th:text="#{label.nascondi}" onclick="showTable()"></button>
+			                    	</div>
+			                    </th:block>
 		                    	<div class="col-lg-1 col-md-2 col-sm-2 col-xs-3">
 									<div class="radio">
 										<label th:class="${!canValutaDomanda} ? 'label-disabled'">
