--- a/src/main/resources/templates/accreditamento/datiAccreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/datiAccreditamentoFragment.html
@@ -27,8 +27,11 @@
 						<th:block th:unless="${showOnly}">
 							<input type="hidden" name="editId" th:value="${datiAccreditamentoWrapper.datiAccreditamento.id}" />
 							<input type="hidden" th:field="${datiAccreditamentoWrapper.accreditamentoId}" />
-							<input type="hidden" th:field="${datiAccreditamentoWrapper.provider.id}" />
 							<input type="hidden" th:field="${datiAccreditamentoWrapper.idEditabili}" />
+							<input type="hidden" th:field="${datiAccreditamentoWrapper.provider.id}" />
+							<input type="hidden" th:field="${datiAccreditamentoWrapper.statoAccreditamento}" />
+							<input type="hidden" th:field="${datiAccreditamentoWrapper.fieldIntegrazione}" />
+							<input type="hidden" th:field="${datiAccreditamentoWrapper.wrapperMode}" />
 							<th:block th:if="${enableField}">
 								<input type="hidden" th:field="${richiestaIntegrazioneWrapper.accreditamentoId}" />
 								<input type="hidden" th:field="${richiestaIntegrazioneWrapper.subset}" />
