--- a/src/main/resources/templates/pianoFormativo/pianoFormativoFragment.html
+++ b/src/main/resources/templates/pianoFormativo/pianoFormativoFragment.html
@@ -10,26 +10,25 @@
 		<!-- differenzia se il piano formativo viene chiamato dall'accreditamento o dall'apposita sidebar -->
 		<th:block th:with="prefixURL=${accreditamentoId != null ? '/accreditamento/'+accreditamentoId : ''},
 			urlParam=${mode != 'show' ? '?from='+mode : ''},
-			hasActionButtons=${mode != 'show'},
+			hasActionButtons=${mode != 'show' and mode != 'enableField'},
 			valutabile=${mode == 'validate'},
 			editabile=${mode == 'edit'},
-			showOnly=${mode == 'show'},
-			enableField=${mode == 'enableField'}">
-
-				<div th:if="${(__${pianoFormativo}__ == null) or #lists.isEmpty(__${pianoFormativo}__.eventi)}" th:text="#{label.nessun_evento_piano_formativo}"></div>
+			showOnly=${mode == 'show' or mode == 'enableField'},
+			enableField=${false}">
+		<div th:if="${(__${pianoFormativo}__ == null) or #lists.isEmpty(__${pianoFormativo}__.eventi)}" th:text="#{label.nessun_evento_piano_formativo}"></div>
 
 				<table th:unless="${(__${pianoFormativo}__ == null) or #lists.isEmpty(__${pianoFormativo}__.eventi)}" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%" th:classappend="${'datatable-responsive-evento-'+mode}">
 					<thead>
 						<tr>
 							<th th:text="#{label.tipologia_evento}">Tipologia dell'evento</th>
-							<th th:unless="${editabile}" th:text="${valutabile ? #messages.msg('label.stato_valutazione') : #messages.msg('label.stato_inserimento')}">label.stato_inserimento/valutazione</th>
+							<th th:unless="${editabile or enableField}" th:text="${valutabile ? #messages.msg('label.stato_valutazione') : #messages.msg('label.stato_inserimento')}">label.stato_inserimento/valutazione</th>
 							<th th:if="${hasActionButtons}" th:text="#{label.azioni}">Azioni</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr th:each="evento, row : ${__${pianoFormativo}__.eventi}">
 							<td><a th:text="${evento.titolo}" th:href="@{|${prefixURL}/provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/show${urlParam}|}"></a></td>
-							<th:block th:unless="${editabile}">
+							<th:block th:unless="${editabile or enableField}">
 								<td th:if="${(showOnly or enableField) and !evento.new}">
 									<i class="fa table-icon fa-check green" th:title="#{label.inserito}"></i>
 								</td>
