--- a/src/main/resources/templates/sede/sedeFragment.html
+++ b/src/main/resources/templates/sede/sedeFragment.html
@@ -10,7 +10,8 @@
 	<th:block th:fragment="sede(mode)">
 		<th:block th:with="editabile=${mode == 'edit'},
 			valutabile=${mode == 'validate'},
-			showOnly=${mode == 'show'}">
+			showOnly=${mode == 'show'},
+			enableField=${mode == 'enableField'}">
 
 			<!-- ogni parte non in comune sarà gestita in maniera appropriata -->
 			<div class="x_content">
@@ -18,7 +19,7 @@
 				<div class="form-horizontal form-label-left" th:remove="${showOnly} ? none : tag">
 					<form th:remove="${!showOnly} ? none : tag"
 						id="formSede" class="form-horizontal form-label-left"
-						th:action="@{|/accreditamento/${sedeWrapper.accreditamentoId}/provider/${sedeWrapper.providerId}/sede/|} + ${valutabile ? 'validate' : 'save'}"
+						th:action="@{|/accreditamento/${sedeWrapper.accreditamentoId}/provider/${sedeWrapper.providerId}/sede/|} + ${editabile ? 'save' : mode}"
 						method="post" enctype="multipart/form-data"
 						novalidate="novalidate">
 
@@ -27,8 +28,19 @@
 							<input type="hidden" name="editId" th:value="${sedeWrapper.sede.id}" />
 							<input type="hidden" th:field="${sedeWrapper.accreditamentoId}" />
 							<input type="hidden" th:field="${sedeWrapper.idEditabili}" />
+							<input type="hidden" th:field="${sedeWrapper.statoAccreditamento}" />
+							<input type="hidden" th:field="${sedeWrapper.fieldIntegrazione}" />
+							<input type="hidden" th:field="${sedeWrapper.wrapperMode}" />
+							<th:block th:if="${enableField}">
+								<input type="hidden" th:field="${richiestaIntegrazioneWrapper.accreditamentoId}" />
+								<input type="hidden" th:field="${richiestaIntegrazioneWrapper.subset}" />
+								<input type="hidden" th:field="${richiestaIntegrazioneWrapper.objRef}" />
+							</th:block>
 						</th:block>
-
+						
+						<!-- info -->
+						<h2 th:if="${sedeWrapper.statoAccreditamento == T(it.tredi.ecm.dao.enumlist.AccreditamentoStatoEnum).INTEGRAZIONE}" class="col-xs-12 alert alert-info with-margin-top text-center" th:text="#{label.info_applicazione_integrazione}"></h2>
+						
 						<!-- RADIO FLAG SEDELEGALE -->
 						<div th:if="${!valutabile and !showOnly}" th:class="${valutabile ? 'item validateAlert form-group' : 'item form-group'}" th:classappend="${#fields.hasErrors('sedeWrapper.sede.sedeLegale')} ? 'bad'">
 							<label class="control-label col-md-4 col-sm-4 col-xs-12">
@@ -37,29 +49,32 @@
 							<th:block th:if="${editabile}">
 								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<div class="radio">
-										<label th:class="${#lists.isEmpty(sedeWrapper.idEditabili)} ? 'label-disabled'">
-											<input id="isSedeLegale" name="isSedeLegale" class="flat" type="radio" th:field="${sedeWrapper.sede.sedeLegale}" value="true" th:disabled="${#lists.isEmpty(sedeWrapper.idEditabili)}" />
+										<label th:class="${!#lists.contains(sedeWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('sede.sedeLegale'))} ? 'label-disabled'">
+											<input id="isSedeLegale" name="isSedeLegale" class="flat" type="radio" th:field="${sedeWrapper.sede.sedeLegale}" value="true" th:disabled="${!#lists.contains(sedeWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('sede.sedeLegale'))}" />
 											<span th:text="#{label.sì}">Sì</span>
 										</label>
 									</div>
 									<div class="radio">
-										<label th:class="${#lists.isEmpty(sedeWrapper.idEditabili)} ? 'label-disabled'">
-											<input id="isNotSedeLegale" name="isSedeLegale" class="flat" type="radio" th:field="${sedeWrapper.sede.sedeLegale}" value="false" th:disabled="${#lists.isEmpty(sedeWrapper.idEditabili)}" />
+										<label th:class="${!#lists.contains(sedeWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('sede.sedeLegale'))} ? 'label-disabled'">
+											<input id="isNotSedeLegale" name="isSedeLegale" class="flat" type="radio" th:field="${sedeWrapper.sede.sedeLegale}" value="false" th:disabled="${!#lists.contains(sedeWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('sede.sedeLegale'))}" />
 											<span th:text="#{label.no}">No</span>
 										</label>
 									</div>
 								</div>
 							</th:block>
-							<th:block th:if="${showOnly}">
-								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+							<th:block th:if="${showOnly or enableField}">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
 									<div class="value" th:text="${sedeWrapper.sede.sedeLegale ? #messages.msg('label.sì') : #messages.msg('label.no')}"></div>
 								</div>
+								<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+		                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('sede.sedeLegale')}" /> 
+		                    	</div>
 							</th:block>
 							<div th:if="${#fields.hasErrors('sedeWrapper.sede.sedeLegale')}" class="alert" th:classappend="${valutabile} ? 'col-xs-12'" th:errors="${sedeWrapper.sede.sedeLegale}"></div>
 						</div>
 
 						<!-- RADIO FLAG SEDEOPERATIVA -->
-						<div th:if="${!valutabile and !showOnly}" id="operativaRadioContainer" th:classappend="${sedeWrapper.sede.sedeLegale == false ? 'hidden' : ''}">
+						<div th:if="${!valutabile and !showOnly}" id="operativaRadioContainer" th:classappend="${(sedeWrapper.sede.sedeLegale == false and !enableField) ? 'hidden' : ''}">
 							<div th:class="${valutabile ? 'item validateAlert form-group' : 'item form-group'}" th:classappend="${#fields.hasErrors('sedeWrapper.sede.sedeOperativa')} ? 'bad'">
 								<label class="control-label col-md-4 col-sm-4 col-xs-12">
 									<span th:class="${showOnly ? 'label-show' : ''}" th:text="${editabile ? #messages.msg('label.is_sede_operativa') : #messages.msg('label.inserita_come_sede_operativa')}">Inserisci come Sede Operativa</span>
@@ -67,23 +82,26 @@
 								<th:block th:if="${editabile}">
 									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 										<div class="radio">
-											<label th:class="${#lists.isEmpty(sedeWrapper.idEditabili)} ? 'label-disabled'">
-												<input id="isSedeOperativa" name="isSedeOperativa" class="flat" type="radio" th:field="${sedeWrapper.sede.sedeOperativa}" value="true" th:disabled="${#lists.isEmpty(sedeWrapper.idEditabili)}" />
+											<label th:class="${!#lists.contains(sedeWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('sede.sedeOperativa'))} ? 'label-disabled'">
+												<input id="isSedeOperativa" name="isSedeOperativa" class="flat" type="radio" th:field="${sedeWrapper.sede.sedeOperativa}" value="true" th:disabled="${!#lists.contains(sedeWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('sede.sedeOperativa'))}" />
 												<span th:text="#{label.sì}">Sì</span>
 											</label>
 										</div>
 										<div class="radio">
-											<label th:class="${#lists.isEmpty(sedeWrapper.idEditabili)} ? 'label-disabled'">
-												<input id="isNotSedeOperativa" name="isSedeOperativa" class="flat" type="radio" th:field="${sedeWrapper.sede.sedeOperativa}" value="false" th:disabled="${#lists.isEmpty(sedeWrapper.idEditabili)}" />
+											<label th:class="${!#lists.contains(sedeWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('sede.sedeOperativa'))} ? 'label-disabled'">
+												<input id="isNotSedeOperativa" name="isSedeOperativa" class="flat" type="radio" th:field="${sedeWrapper.sede.sedeOperativa}" value="false" th:disabled="${!#lists.contains(sedeWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('sede.sedeOperativa'))}" />
 												<span th:text="#{label.no}">No</span>
 											</label>
 										</div>
 									</div>
 								</th:block>
-								<th:block th:if="${showOnly}">
-									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+								<th:block th:if="${showOnly or enableField}">
+									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
 										<div class="value" th:text="${sedeWrapper.sede.sedeOperativa ? #messages.msg('label.sì') : #messages.msg('label.no')}"></div>
 									</div>
+									<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+			                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('sede.sedeOperativa')}" /> 
+			                    	</div>
 								</th:block>
 								<div th:if="${#fields.hasErrors('sedeWrapper.sede.sedeOperativa')}" class="alert" th:classappend="${valutabile} ? 'col-xs-12'" th:errors="${sedeWrapper.sede.sedeOperativa}"></div>
 							</div>
@@ -107,10 +125,13 @@
 		                        	</select>
 							  	</div>
 							</th:block>
-							<th:block th:if="${showOnly}">
-								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+							<th:block th:if="${showOnly or enableField}">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
 									<div class="value" th:text="${sedeWrapper.sede.provincia}"></div>
 								</div>
+								<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+		                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('sede.provincia')}" /> 
+		                    	</div>
 							</th:block>
 							<th:block th:if="${valutabile}">
 		                    	<div class="margin-valutabile text-center col-lg-4 col-md-3 col-sm-7 col-xs-7">
@@ -154,10 +175,13 @@
 		                        	</select>
 							  	</div>
 							</th:block>
-							<th:block th:if="${showOnly}">
-								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+							<th:block th:if="${showOnly or enableField}">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
 									<div class="value" th:text="${sedeWrapper.sede.comune}"></div>
 								</div>
+								<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+		                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('sede.comune')}" /> 
+		                    	</div>
 							</th:block>
 							<th:block th:if="${valutabile}">
 		                    	<div class="margin-valutabile text-center col-lg-4 col-md-3 col-sm-7 col-xs-7">
@@ -202,10 +226,13 @@
 										th:disabled="${!#lists.contains(sedeWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('sede.indirizzo')) }"/>
 								</div>
 							</th:block>
-							<th:block th:if="${showOnly}">
-								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+							<th:block th:if="${showOnly or enableField}">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
 									<div class="value" th:text="${sedeWrapper.sede.indirizzo}"></div>
 								</div>
+								<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+		                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('sede.indirizzo')}" /> 
+		                    	</div>
 							</th:block>
 							<th:block th:if="${valutabile}">
 		                    	<div class="margin-valutabile text-center col-lg-4 col-md-3 col-sm-7 col-xs-7">
@@ -250,10 +277,13 @@
 		                        	</select>
 								</div>
 							</th:block>
-							<th:block th:if="${showOnly}">
-								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+							<th:block th:if="${showOnly or enableField}">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
 									<div class="value" th:text="${sedeWrapper.sede.cap}"></div>
 								</div>
+								<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+		                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('sede.cap')}" /> 
+		                    	</div>
 							</th:block>
 							<th:block th:if="${valutabile}">
 		                    	<div class="margin-valutabile text-center col-lg-4 col-md-3 col-sm-7 col-xs-7">
@@ -298,10 +328,13 @@
 										th:disabled="${!#lists.contains(sedeWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('sede.telefono')) }"/>
 								</div>
 							</th:block>
-							<th:block th:if="${showOnly}">
-								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+							<th:block th:if="${showOnly or enableField}">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
 									<div class="value" th:text="${sedeWrapper.sede.telefono}"></div>
 								</div>
+								<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+		                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('sede.telefono')}" /> 
+		                    	</div>
 							</th:block>
 							<th:block th:if="${valutabile}">
 		                    	<div class="margin-valutabile text-center col-lg-4 col-md-3 col-sm-7 col-xs-7">
@@ -345,10 +378,13 @@
 										th:disabled="${!#lists.contains(sedeWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('sede.fax')) }"/>
 								</div>
 							</th:block>
-							<th:block th:if="${showOnly}">
-								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+							<th:block th:if="${showOnly or enableField}">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
 									<div class="value" th:text="${sedeWrapper.sede.fax}"></div>
 								</div>
+								<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+		                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('sede.fax')}" /> 
+		                    	</div>
 							</th:block>
 							<th:block th:if="${valutabile}">
 		                    	<div class="margin-valutabile text-center col-lg-4 col-md-3 col-sm-7 col-xs-7">
@@ -393,10 +429,13 @@
 										th:disabled="${!#lists.contains(sedeWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('sede.email')) }"/>
 								</div>
 							</th:block>
-							<th:block th:if="${showOnly}">
-								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+							<th:block th:if="${showOnly or enableField}">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
 									<div class="value" th:text="${sedeWrapper.sede.email}"></div>
 								</div>
+								<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+		                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('sede.email')}" /> 
+		                    	</div>
 							</th:block>
 							<th:block th:if="${valutabile}">
 		                    	<div class="margin-valutabile text-center col-lg-4 col-md-3 col-sm-7 col-xs-7">
