Integrazione con Bonita in esecuzione...RICHIESTA_INTEGRAZIONE

--- a/src/main/resources/templates/seduta/sedutaShow.html
+++ b/src/main/resources/templates/seduta/sedutaShow.html
@@ -12,6 +12,7 @@
 					<div class="x_title">
 						<h2 th:text="#{label.visualizzazione_seduta(${#temporals.format(sedutaWrapper.seduta.data, 'dd/MM/yyyy')})}">Seduta</h2>
 						<div class="pull-right buttons-header">
+							<a th:if="${sedutaWrapper.canBloccaSeduta == true}" class="btn btn-warning pull-right" th:href="@{|/seduta/${sedutaWrapper.seduta.id}/bloccaSeduta|}">Blocca Seduta</a>
 							<a th:if="${#sets.isEmpty(sedutaWrapper.seduta.valutazioniCommissione)}" class="btn btn-danger pull-right" th:text="#{label.elimina}" th:href="@{|/seduta/${sedutaWrapper.seduta.id}/remove|}"></a>
 							<a th:if="${sedutaWrapper.canEdit == true}" class="btn btn-success pull-right" th:text="#{label.modifica}" th:href="@{|/seduta/${sedutaWrapper.seduta.id}/edit|}"></a>
 							<a th:if="${sedutaWrapper.canEdit == true}" class="btn btn-primary pull-right" th:text="#{label.gestione_domande}" th:href="@{|/seduta/${sedutaWrapper.seduta.id}/handle|}"></a>
