--- a/src/main/resources/templates/seduta/sedutaValidate.html
+++ b/src/main/resources/templates/seduta/sedutaValidate.html
@@ -194,25 +194,30 @@
 					$("#radioContainer").empty();
 					//crea una input per ogni stato nel quale può andare la determinata domanda di accreditamento
 					for (var i in setStati) {
-						var parent = $("<div/>", {
-							class: "radio"
-						}).appendTo('#radioContainer');
-						var label = $("<label/>", {
-							class: "radioLabel"
-						}).appendTo(parent);
-						var input = $("<input/>", {
-							type: "radio",
-							class: "flat",
-							name: "valutazioneTarget.stato",
-							value: setStati[i]
-						}).appendTo(label);
-						//inizializza l'input (icheck)
-						input.iCheck({
-							radioClass: 'iradio_flat-green'
-						});
-						var span = $("<span/>", {
-							text: " " + mappaLabel[setStati[i]]
-						}).appendTo(label);
+						
+						if(i != 'INS_ODG'){	
+							var parent = $("<div/>", {
+								class: "radio"
+							}).appendTo('#radioContainer');
+							var label = $("<label/>", {
+								class: "radioLabel"
+							}).appendTo(parent);
+							var input = $("<input/>", {
+								type: "radio",
+								class: "flat",
+								name: "valutazioneTarget.stato",
+								value: setStati[i].$name
+							}).appendTo(label);
+							//inizializza l'input (icheck)
+							input.iCheck({
+								radioClass: 'iradio_flat-green'
+							});
+							var span = $("<span/>", {
+								text: " " + mappaLabel[setStati[i].$name]
+							}).appendTo(label);
+							
+						}	
+						
 					}
 					//prepara url action del form di valutazione
 					url = [[@{|/seduta/${sedutaWrapper.seduta.id}/valutazioneCommissione/|}]] + id + "/validate";
@@ -226,7 +231,7 @@
 					ACCREDITATO: [[#{label.accreditato}]],
 					DINIEGO: [[#{label.diniego}]],
 					RICHIESTA_INTEGRAZIONE: [[#{label.richiesta_integrazione}]],
-					RICHIESTA_PREAVVISO_RIGETTO: [[#{label.richiesta_preavviso_rigetto}]],
+					RICHIESTA_PREAVVISO_RIGETTO: [[#{label.richiesta_preavviso_di_rigetto}]],
 					INS_ODG: [[#{label.ins_odg}]]
 				};
 
