--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,7 +11,7 @@
 				<!-- title -->
 				<div class="row">
 					<div class="col-xs-12">
-						<div class="home-title" th:text="${homeWrapper.isProvider} ? #{label.home_page_provider_welcome(${homeWrapper.nomeProvider})} : #{label.home_page_user_welcome(${homeWrapper.user.nome}, ${homeWrapper.user.cognome})}">Home page</div>
+						<div class="home-title" th:text="#{label.homepage}">Home page</div>
 					</div>
 				</div>
 
