--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1054,3 +1054,6 @@ tr.integrazione-eliminazione td:first-child a{
 	color: white;
 }
 
+.nav.navbar-nav.navbar-right > li:hover {
+	background-color: rgba(115, 135, 156, 0.1);
+}
