--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -380,6 +380,10 @@
 				            ];
 				return array;
 			}
+			
+			function selezionaTuttiSi(){
+				$('input[value=true]').iCheck('check');
+			}
 
 			/*]]>*/
 		</script>
