--- a/src/main/resources/templates/persona/personaValidate.html
+++ b/src/main/resources/templates/persona/personaValidate.html
@@ -42,6 +42,7 @@
 							<label th:if="${canValutaDomanda}" class="btn btn-success pull-right" th:text="#{label.salva}" for="submitButton"></label>
 							<button class="btn btn-primary pull-right" th:text="#{label.tutte_le_valutazioni}" data-toggle="modal" data-target=".modal-altreValutazioni"></button>
 							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|${returnLink}|}"></a>
+							<button class="btn btn-primary pull-right" th:if="${@ecmProperties.debugTestMode}" onclick="selezionaTuttiSi()">Tutti si</button>
 						</div>
 						<div class="clearfix"></div>
 					</div>
